sass/_sitemap.scss
.sitemap {
  opacity: 0.3;
  transition: opacity $time;
  position: relative;
  overflow: auto;

  &:hover {
    opacity: 1;
  }

  li {
    padding-left: 20px;
    transition: padding $time;

    &[data-url-target]:hover {
      padding-left: 25px;
    }

    &.is-active {
      > div {
        font-weight: bold;
        color: $link;
        border-right: 2px solid $link;
        > a {
          color: $link;
        }
      }
    }

    div {
      position: relative;
      cursor: pointer;
      height: 100%;
      border-right: 2px solid #eee;
    }
  }

  // colored border
  li.is-active {
    > div:after {
      background-color: $link;
    }
  }

  .list-is-collapsed {
    height: 0;
  }

  .list-is-collapsible {
    overflow: hidden;
  }

  // arrow styling
  .children-toggle {
    border: solid $primary;
    border-width: 0 1px 1px 0;
    padding: 2px;
    position: absolute;
    top: 8px;
    left: -15px;
    transform: rotate(-45deg);
    transition: all $time ease-in-out;
  }

  li.item-expanded {
    > div .children-toggle {
      transform: rotate(45deg);
    }
  }

  // override primary color set on links
  a {
    color: $grey;
  }
}

// override settings set by the scroll spy
@media screen and (max-width: $desktop) {
  nav[role=sitemap] {
    position: initial !important;
    top: initial !important;
    height: auto !important;
    width: auto !important;
    overflow: hidden;
    opacity: 1;
  }
}

